sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                               | **Description**                                                                                                                                                                                                                                                                                                                                |
| ----------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [administratorsCreateSample.js][administratorscreatesample]                                                 | Creates a new server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/AdministratorAdd.json                                                                                                                                                                        |
| [administratorsDeleteSample.js][administratorsdeletesample]                                                 | Deletes an Microsoft Entra Administrator associated with the server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/AdministratorDelete.json                                                                                                                      |
| [administratorsGetSample.js][administratorsgetsample]                                                       | Gets information about a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/AdministratorGet.json                                                                                                                                                             |
| [administratorsListByServerSample.js][administratorslistbyserversample]                                     | List all the AAD administrators for a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/AdministratorsListByServer.json                                                                                                                                |
| [administratorsMicrosoftEntraCreateOrUpdateSample.js][administratorsmicrosoftentracreateorupdatesample]     | Creates a new server administrator associated to a Microsoft Entra principal. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/AdministratorsMicrosoftEntraAdd.json                                                                                                          |
| [administratorsMicrosoftEntraDeleteSample.js][administratorsmicrosoftentradeletesample]                     | Deletes an existing server administrator associated to a Microsoft Entra principal. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/AdministratorsMicrosoftEntraDelete.json                                                                                                 |
| [administratorsMicrosoftEntraGetSample.js][administratorsmicrosoftentragetsample]                           | Gets information about a server administrator associated to a Microsoft Entra principal. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/AdministratorsMicrosoftEntraGet.json                                                                                               |
| [administratorsMicrosoftEntraListByServerSample.js][administratorsmicrosoftentralistbyserversample]         | List all server administrators associated to a Microsoft Entra principal. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/AdministratorsMicrosoftEntraListByServer.json                                                                                                     |
| [advancedThreatProtectionSettingsGetSample.js][advancedthreatprotectionsettingsgetsample]                   | Gets state of advanced threat protection settings for a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/AdvancedThreatProtectionSettingsGet.json                                                                                                                    |
| [advancedThreatProtectionSettingsListByServerSample.js][advancedthreatprotectionsettingslistbyserversample] | Lists state of advanced threat protection settings for a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/AdvancedThreatProtectionSettingsListByServer.json                                                                                                          |
| [backupsAutomaticAndOnDemandCreateSample.js][backupsautomaticandondemandcreatesample]                       | Creates an on demand backup of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsAutomaticAndOnDemandCreate.json                                                                                                                                             |
| [backupsAutomaticAndOnDemandDeleteSample.js][backupsautomaticandondemanddeletesample]                       | Deletes a specific backup, given its name. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsAutomaticAndOnDemandDelete.json                                                                                                                                           |
| [backupsAutomaticAndOnDemandGetSample.js][backupsautomaticandondemandgetsample]                             | Gets information of an on demand backup, given its name. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsAutomaticAndOnDemandGet.json                                                                                                                                |
| [backupsAutomaticAndOnDemandListByServerSample.js][backupsautomaticandondemandlistbyserversample]           | Lists all available backups of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsAutomaticAndOnDemandListByServer.json                                                                                                                                       |
| [backupsCreateSample.js][backupscreatesample]                                                               | Create a specific backup for PostgreSQL flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/BackupCreate.json                                                                                                                                         |
| [backupsDeleteSample.js][backupsdeletesample]                                                               | Deletes a specific backup. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/BackupDelete.json                                                                                                                                                                       |
| [backupsGetSample.js][backupsgetsample]                                                                     | Get specific backup for a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/BackupGet.json                                                                                                                                                             |
| [backupsListByServerSample.js][backupslistbyserversample]                                                   | List all the backups for a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/BackupListByServer.json                                                                                                                                                   |
| [backupsLongTermRetentionCheckPrerequisitesSample.js][backupslongtermretentioncheckprerequisitessample]     | Performs all checks required for a long term retention backup operation to succeed. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsLongTermRetentionCheckPrerequisites.json                                                                                         |
| [backupsLongTermRetentionGetSample.js][backupslongtermretentiongetsample]                                   | Gets the results of a long retention backup operation for a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsLongTermRetentionGet.json                                                                                                                        |
| [backupsLongTermRetentionListByServerSample.js][backupslongtermretentionlistbyserversample]                 | Lists the results of the long term retention backup operations for a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsLongTermRetentionListByServer.json                                                                                                      |
| [backupsLongTermRetentionStartSample.js][backupslongtermretentionstartsample]                               | Initiates a long term retention backup. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsLongTermRetentionStart.json                                                                                                                                                  |
| [capabilitiesByLocationListSample.js][capabilitiesbylocationlistsample]                                     | Lists the capabilities available in a given location for a specific subscription. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/CapabilitiesByLocationList.json                                                                                                           |
| [capabilitiesByServerListSample.js][capabilitiesbyserverlistsample]                                         | Lists the capabilities available for a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/CapabilitiesByServerList.json                                                                                                                                          |
| [capturedLogsListByServerSample.js][capturedlogslistbyserversample]                                         | Lists all captured logs for download in a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/CapturedLogsListByServer.json                                                                                                                                             |
| [checkMigrationNameAvailabilitySample.js][checkmigrationnameavailabilitysample]                             | This method checks whether a proposed migration name is valid and available. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/CheckMigrationNameAvailability.json                                                                                                   |
| [checkNameAvailabilityExecuteSample.js][checknameavailabilityexecutesample]                                 | Check the availability of name for resource x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/CheckNameAvailability.json                                                                                                                                             |
| [checkNameAvailabilityWithLocationExecuteSample.js][checknameavailabilitywithlocationexecutesample]         | Check the availability of name for resource x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/CheckNameAvailabilityLocationBased.json                                                                                                                                |
| [configurationsGetSample.js][configurationsgetsample]                                                       | Gets information about a specific configuration (also known as server parameter) of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ConfigurationsGet.json                                                                                                        |
| [configurationsListByServerSample.js][configurationslistbyserversample]                                     | Lists all configurations (also known as server parameters) of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ConfigurationsListByServer.json                                                                                                                     |
| [configurationsPutSample.js][configurationsputsample]                                                       | Updates, using Put verb, the value assigned to a specific modifiable configuration (also known as server parameter) of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ConfigurationsUpdateUsingPut.json                                                          |
| [configurationsUpdateSample.js][configurationsupdatesample]                                                 | Updates the value assigned to a specific modifiable configuration (also known as server parameter) of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ConfigurationsUpdate.json                                                                                   |
| [databasesCreateSample.js][databasescreatesample]                                                           | Creates a new database. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/DatabasesCreate.json                                                                                                                                                                                |
| [databasesDeleteSample.js][databasesdeletesample]                                                           | Deletes an existing database. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/DatabasesDelete.json                                                                                                                                                                          |
| [databasesGetSample.js][databasesgetsample]                                                                 | Gets information about an existing database. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/DatabasesGet.json                                                                                                                                                              |
| [databasesListByServerSample.js][databaseslistbyserversample]                                               | Lists all databases in a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/DatabasesListByServer.json                                                                                                                                                                 |
| [firewallRulesCreateOrUpdateSample.js][firewallrulescreateorupdatesample]                                   | Creates a new firewall rule or updates an existing firewall rule. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/FirewallRulesCreateOrUpdate.json                                                                                                                          |
| [firewallRulesDeleteSample.js][firewallrulesdeletesample]                                                   | Deletes an existing firewall rule. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/FirewallRulesDelete.json                                                                                                                                                                 |
| [firewallRulesGetSample.js][firewallrulesgetsample]                                                         | Gets information about a firewall rule in a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/FirewallRulesGet.json                                                                                                                                                   |
| [firewallRulesListByServerSample.js][firewallruleslistbyserversample]                                       | Lists information about all firewall rules in a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/FirewallRulesListByServer.json                                                                                                                                      |
| [flexibleServerStartLtrBackupSample.js][flexibleserverstartltrbackupsample]                                 | Start the Long Term Retention Backup operation x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/LongTermRetentionBackup.json                                                                                                                                        |
| [flexibleServerTriggerLtrPreBackupSample.js][flexibleservertriggerltrprebackupsample]                       | PreBackup operation performs all the checks that are needed for the subsequent long term retention backup operation to succeed. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/LongTermRetentionPreBackup.json                                                    |
| [getPrivateDnsZoneSuffixExecuteSample.js][getprivatednszonesuffixexecutesample]                             | Get private DNS zone suffix in the cloud x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/GetPrivateDnsZoneSuffix.json                                                                                                                                              |
| [locationBasedCapabilitiesExecuteSample.js][locationbasedcapabilitiesexecutesample]                         | Get capabilities at specified location in a given subscription. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/CapabilitiesByLocation.json                                                                                                                        |
| [logFilesListByServerSample.js][logfileslistbyserversample]                                                 | List all the server log files in a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/LogFilesListByServer.json                                                                                                                                         |
| [ltrBackupOperationsGetSample.js][ltrbackupoperationsgetsample]                                             | Gets the result of the give long term retention backup operation for the flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/LongTermRetentionOperationGet.json                                                                                       |
| [ltrBackupOperationsListByServerSample.js][ltrbackupoperationslistbyserversample]                           | Gets the result of the give long term retention backup operations for the flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/LongTermRetentionOperationListByServer.json                                                                             |
| [migrationsCancelSample.js][migrationscancelsample]                                                         | Cancels an active migration. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/MigrationsCancel.json                                                                                                                                                                          |
| [migrationsCheckNameAvailabilitySample.js][migrationschecknameavailabilitysample]                           | Checks if a proposed migration name is valid and available. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/MigrationsCheckNameAvailability.json                                                                                                                            |
| [migrationsCreateSample.js][migrationscreatesample]                                                         | Creates a new migration. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/MigrationsCreateValidateOnly.json                                                                                                                                                                  |
| [migrationsDeleteSample.js][migrationsdeletesample]                                                         | Deletes a migration. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/Migrations_Delete.json                                                                                                                                                                        |
| [migrationsGetSample.js][migrationsgetsample]                                                               | Gets information about a migration. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/MigrationsGetMigrationWithSuccessfulValidationAndMigration.json                                                                                                                         |
| [migrationsListByTargetServerSample.js][migrationslistbytargetserversample]                                 | Lists all migrations of a target flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/MigrationsListByTargetServer.json                                                                                                                                         |
| [migrationsUpdateSample.js][migrationsupdatesample]                                                         | Updates an existing migration. The request body can contain one to many of the mutable properties present in the migration definition. Certain property updates initiate migration state transitions. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/MigrationsUpdate.json |
| [nameAvailabilityCheckGloballySample.js][nameavailabilitycheckgloballysample]                               | Checks the validity and availability of the given name, to assign it to a new server or to use it as the base name of a new pair of virtual endpoints. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/NameAvailabilityCheckGlobally.json                                   |
| [nameAvailabilityCheckWithLocationSample.js][nameavailabilitycheckwithlocationsample]                       | Check the availability of name for resource x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/NameAvailabilityCheckWithLocation.json                                                                                                                                          |
| [operationsListSample.js][operationslistsample]                                                             | Lists all available REST API operations. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/OperationsList.json                                                                                                                                                                |
| [privateDnsZoneSuffixGetSample.js][privatednszonesuffixgetsample]                                           | Gets the private DNS zone suffix. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/PrivateDnsZoneSuffixGet.json                                                                                                                                                              |
| [privateEndpointConnectionDeleteSample.js][privateendpointconnectiondeletesample]                           | Deletes a private endpoint connection with a given name. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/PrivateEndpointConnectionDelete.json                                                                                                                      |
| [privateEndpointConnectionUpdateSample.js][privateendpointconnectionupdatesample]                           | Approve or reject a private endpoint connection with a given name. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/PrivateEndpointConnectionUpdate.json                                                                                                            |
| [privateEndpointConnectionsDeleteSample.js][privateendpointconnectionsdeletesample]                         | Deletes a private endpoint connection. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/PrivateEndpointConnectionsDelete.json                                                                                                                                                |
| [privateEndpointConnectionsGetSample.js][privateendpointconnectionsgetsample]                               | Gets a private endpoint connection. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/PrivateEndpointConnectionsGet.json                                                                                                                                                      |
| [privateEndpointConnectionsListByServerSample.js][privateendpointconnectionslistbyserversample]             | Lists all private endpoint connections on a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/PrivateEndpointConnectionsList.json                                                                                                                                     |
| [privateEndpointConnectionsUpdateSample.js][privateendpointconnectionsupdatesample]                         | Approves or rejects a private endpoint connection. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/PrivateEndpointConnectionsUpdate.json                                                                                                                                    |
| [privateLinkResourcesGetSample.js][privatelinkresourcesgetsample]                                           | Gets a private link resource for PostgreSQL server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/PrivateLinkResourcesGet.json                                                                                                                                            |
| [privateLinkResourcesListByServerSample.js][privatelinkresourceslistbyserversample]                         | Gets the private link resources for PostgreSQL server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/PrivateLinkResourcesList.json                                                                                                                                        |
| [quotaUsagesListSample.js][quotausageslistsample]                                                           | Get quota usages at specified location in a given subscription. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/QuotaUsagesForFlexibleServers.json                                                                                                                          |
| [replicasListByServerSample.js][replicaslistbyserversample]                                                 | Lists all read replicas of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ReplicasListByServer.json                                                                                                                                                              |
| [serverCapabilitiesListSample.js][servercapabilitieslistsample]                                             | Get capabilities for a flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/ServerCapabilities.json                                                                                                                                                    |
| [serverThreatProtectionSettingsCreateOrUpdateSample.js][serverthreatprotectionsettingscreateorupdatesample] | Creates or updates a server's Advanced Threat Protection settings. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/AdvancedThreatProtectionSettingsCreateOrUpdate.json                                                                                                      |
| [serverThreatProtectionSettingsGetSample.js][serverthreatprotectionsettingsgetsample]                       | Get a server's Advanced Threat Protection settings. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/ServerThreatProtectionSettingsGet.json                                                                                                                         |
| [serverThreatProtectionSettingsListByServerSample.js][serverthreatprotectionsettingslistbyserversample]     | Get a list of server's Threat Protection state. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/ServerThreatProtectionSettingsListByServer.json                                                                                                                    |
| [serversCreateOrUpdateSample.js][serverscreateorupdatesample]                                               | Creates a new server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersClusterCreate.json                                                                                                                                                                             |
| [serversCreateSample.js][serverscreatesample]                                                               | Creates a new server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/ClusterCreate.json                                                                                                                                                                           |
| [serversDeleteSample.js][serversdeletesample]                                                               | Deletes or drops an existing server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersDelete.json                                                                                                                                                                     |
| [serversGetSample.js][serversgetsample]                                                                     | Gets information about an existing server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersGetWithVnet.json                                                                                                                                                          |
| [serversListByResourceGroupSample.js][serverslistbyresourcegroupsample]                                     | Lists all servers in a resource group. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersListByResourceGroup.json                                                                                                                                                      |
| [serversListBySubscriptionSample.js][serverslistbysubscriptionsample]                                       | Lists all servers in a subscription. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersListBySubscription.json                                                                                                                                                         |
| [serversListSample.js][serverslistsample]                                                                   | List all the servers in a given subscription. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/ServerList.json                                                                                                                                                      |
| [serversRestartSample.js][serversrestartsample]                                                             | Restarts PostgreSQL database engine in a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersRestartWithFailover.json                                                                                                                                            |
| [serversStartSample.js][serversstartsample]                                                                 | Starts a stopped server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersStart.json                                                                                                                                                                                  |
| [serversStopSample.js][serversstopsample]                                                                   | Stops a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersStop.json                                                                                                                                                                                            |
| [serversUpdateSample.js][serversupdatesample]                                                               | Updates an existing server. The request body can contain one or multiple of the properties present in the normal server definition. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersPromoteReplicaAsForcedStandaloneServer.json                                      |
| [tuningConfigurationDisableSample.js][tuningconfigurationdisablesample]                                     | Disables the config tuning. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_Disable.json                                                                                                                                                       |
| [tuningConfigurationEnableSample.js][tuningconfigurationenablesample]                                       | Enables the config tuning. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_Enable.json                                                                                                                                                         |
| [tuningConfigurationListSessionDetailsSample.js][tuningconfigurationlistsessiondetailssample]               | Gets the session details of a config tuning session. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_ListSessionDetails.json                                                                                                                   |
| [tuningConfigurationListSessionsSample.js][tuningconfigurationlistsessionssample]                           | Gets up the config tuning session status. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_ListSessions.json                                                                                                                                    |
| [tuningConfigurationStartSessionSample.js][tuningconfigurationstartsessionsample]                           | Starts up the config tuning session. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_StartSession.json                                                                                                                                         |
| [tuningConfigurationStopSessionSample.js][tuningconfigurationstopsessionsample]                             | Stops the config tuning session. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_StopSession.json                                                                                                                                              |
| [tuningIndexListRecommendationsSample.js][tuningindexlistrecommendationssample]                             | Retrieve the list of available tuning index recommendations. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningIndex_GetFilteredRecommendations.json                                                                                                           |
| [tuningOptionsGetSample.js][tuningoptionsgetsample]                                                         | Gets the tuning options of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/TuningOptionsGet.json                                                                                                                                                                  |
| [tuningOptionsListByServerSample.js][tuningoptionslistbyserversample]                                       | Lists the tuning options of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/TuningOptionsListByServer.json                                                                                                                                                        |
| [tuningOptionsListRecommendationsSample.js][tuningoptionslistrecommendationssample]                         | Lists available object recommendations. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/TuningOptionsListIndexRecommendationsFilteredForCreateIndex.json                                                                                                                    |
| [virtualEndpointsCreateSample.js][virtualendpointscreatesample]                                             | Creates a pair of virtual endpoints for a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/VirtualEndpointCreate.json                                                                                                                                                |
| [virtualEndpointsDeleteSample.js][virtualendpointsdeletesample]                                             | Deletes a pair of virtual endpoints. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/VirtualEndpointDelete.json                                                                                                                                                             |
| [virtualEndpointsGetSample.js][virtualendpointsgetsample]                                                   | Gets information about a pair of virtual endpoints. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/VirtualEndpointsGet.json                                                                                                                                                |
| [virtualEndpointsListByServerSample.js][virtualendpointslistbyserversample]                                 | Lists pair of virtual endpoints associated to a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/VirtualEndpointsListByServer.json                                                                                                                                   |
| [virtualEndpointsUpdateSample.js][virtualendpointsupdatesample]                                             | Updates a pair of virtual endpoints for a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/VirtualEndpointUpdate.json                                                                                                                                                |
| [virtualNetworkSubnetUsageExecuteSample.js][virtualnetworksubnetusageexecutesample]                         | Get virtual network subnet usage for a given vNet resource id. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/VirtualNetworkSubnetUsage.json                                                                                                                      |
| [virtualNetworkSubnetUsageListSample.js][virtualnetworksubnetusagelistsample]                               | Lists the virtual network subnet usage for a given virtual network. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/VirtualNetworkSubnetUsageList.json                                                                                                                      |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node administratorsCreateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
cross-env POSTGRESQL_SUBSCRIPTION_ID="<postgresql subscription id>" POSTGRESQL_RESOURCE_GROUP="<postgresql resource group>" node administratorsCreateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[administratorscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/administratorsCreateSample.js
[administratorsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/administratorsDeleteSample.js
[administratorsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/administratorsGetSample.js
[administratorslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/administratorsListByServerSample.js
[administratorsmicrosoftentracreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/administratorsMicrosoftEntraCreateOrUpdateSample.js
[administratorsmicrosoftentradeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/administratorsMicrosoftEntraDeleteSample.js
[administratorsmicrosoftentragetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/administratorsMicrosoftEntraGetSample.js
[administratorsmicrosoftentralistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/administratorsMicrosoftEntraListByServerSample.js
[advancedthreatprotectionsettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/advancedThreatProtectionSettingsGetSample.js
[advancedthreatprotectionsettingslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/advancedThreatProtectionSettingsListByServerSample.js
[backupsautomaticandondemandcreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/backupsAutomaticAndOnDemandCreateSample.js
[backupsautomaticandondemanddeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/backupsAutomaticAndOnDemandDeleteSample.js
[backupsautomaticandondemandgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/backupsAutomaticAndOnDemandGetSample.js
[backupsautomaticandondemandlistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/backupsAutomaticAndOnDemandListByServerSample.js
[backupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/backupsCreateSample.js
[backupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/backupsDeleteSample.js
[backupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/backupsGetSample.js
[backupslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/backupsListByServerSample.js
[backupslongtermretentioncheckprerequisitessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/backupsLongTermRetentionCheckPrerequisitesSample.js
[backupslongtermretentiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/backupsLongTermRetentionGetSample.js
[backupslongtermretentionlistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/backupsLongTermRetentionListByServerSample.js
[backupslongtermretentionstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/backupsLongTermRetentionStartSample.js
[capabilitiesbylocationlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/capabilitiesByLocationListSample.js
[capabilitiesbyserverlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/capabilitiesByServerListSample.js
[capturedlogslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/capturedLogsListByServerSample.js
[checkmigrationnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/checkMigrationNameAvailabilitySample.js
[checknameavailabilityexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/checkNameAvailabilityExecuteSample.js
[checknameavailabilitywithlocationexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/checkNameAvailabilityWithLocationExecuteSample.js
[configurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/configurationsGetSample.js
[configurationslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/configurationsListByServerSample.js
[configurationsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/configurationsPutSample.js
[configurationsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/configurationsUpdateSample.js
[databasescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/databasesCreateSample.js
[databasesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/databasesDeleteSample.js
[databasesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/databasesGetSample.js
[databaseslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/databasesListByServerSample.js
[firewallrulescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/firewallRulesCreateOrUpdateSample.js
[firewallrulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/firewallRulesDeleteSample.js
[firewallrulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/firewallRulesGetSample.js
[firewallruleslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/firewallRulesListByServerSample.js
[flexibleserverstartltrbackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/flexibleServerStartLtrBackupSample.js
[flexibleservertriggerltrprebackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/flexibleServerTriggerLtrPreBackupSample.js
[getprivatednszonesuffixexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/getPrivateDnsZoneSuffixExecuteSample.js
[locationbasedcapabilitiesexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/locationBasedCapabilitiesExecuteSample.js
[logfileslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/logFilesListByServerSample.js
[ltrbackupoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/ltrBackupOperationsGetSample.js
[ltrbackupoperationslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/ltrBackupOperationsListByServerSample.js
[migrationscancelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/migrationsCancelSample.js
[migrationschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/migrationsCheckNameAvailabilitySample.js
[migrationscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/migrationsCreateSample.js
[migrationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/migrationsDeleteSample.js
[migrationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/migrationsGetSample.js
[migrationslistbytargetserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/migrationsListByTargetServerSample.js
[migrationsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/migrationsUpdateSample.js
[nameavailabilitycheckgloballysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/nameAvailabilityCheckGloballySample.js
[nameavailabilitycheckwithlocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/nameAvailabilityCheckWithLocationSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/operationsListSample.js
[privatednszonesuffixgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/privateDnsZoneSuffixGetSample.js
[privateendpointconnectiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/privateEndpointConnectionDeleteSample.js
[privateendpointconnectionupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/privateEndpointConnectionUpdateSample.js
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/privateEndpointConnectionsDeleteSample.js
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/privateEndpointConnectionsGetSample.js
[privateendpointconnectionslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/privateEndpointConnectionsListByServerSample.js
[privateendpointconnectionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/privateEndpointConnectionsUpdateSample.js
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/privateLinkResourcesGetSample.js
[privatelinkresourceslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/privateLinkResourcesListByServerSample.js
[quotausageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/quotaUsagesListSample.js
[replicaslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/replicasListByServerSample.js
[servercapabilitieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serverCapabilitiesListSample.js
[serverthreatprotectionsettingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serverThreatProtectionSettingsCreateOrUpdateSample.js
[serverthreatprotectionsettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serverThreatProtectionSettingsGetSample.js
[serverthreatprotectionsettingslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serverThreatProtectionSettingsListByServerSample.js
[serverscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serversCreateOrUpdateSample.js
[serverscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serversCreateSample.js
[serversdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serversDeleteSample.js
[serversgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serversGetSample.js
[serverslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serversListByResourceGroupSample.js
[serverslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serversListBySubscriptionSample.js
[serverslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serversListSample.js
[serversrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serversRestartSample.js
[serversstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serversStartSample.js
[serversstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serversStopSample.js
[serversupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/serversUpdateSample.js
[tuningconfigurationdisablesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/tuningConfigurationDisableSample.js
[tuningconfigurationenablesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/tuningConfigurationEnableSample.js
[tuningconfigurationlistsessiondetailssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/tuningConfigurationListSessionDetailsSample.js
[tuningconfigurationlistsessionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/tuningConfigurationListSessionsSample.js
[tuningconfigurationstartsessionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/tuningConfigurationStartSessionSample.js
[tuningconfigurationstopsessionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/tuningConfigurationStopSessionSample.js
[tuningindexlistrecommendationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/tuningIndexListRecommendationsSample.js
[tuningoptionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/tuningOptionsGetSample.js
[tuningoptionslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/tuningOptionsListByServerSample.js
[tuningoptionslistrecommendationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/tuningOptionsListRecommendationsSample.js
[virtualendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/virtualEndpointsCreateSample.js
[virtualendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/virtualEndpointsDeleteSample.js
[virtualendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/virtualEndpointsGetSample.js
[virtualendpointslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/virtualEndpointsListByServerSample.js
[virtualendpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/virtualEndpointsUpdateSample.js
[virtualnetworksubnetusageexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/virtualNetworkSubnetUsageExecuteSample.js
[virtualnetworksubnetusagelistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/javascript/virtualNetworkSubnetUsageListSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-postgresql-flexible?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/postgresql/arm-postgresql-flexible/README.md
